--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
     "description": "uploadBack is the ultimate backend solution",
     "main": "src/server.js",
     "scripts": {
-        "setup": "npm install && npm update",
-        "start": "node src/server.js"
+        "start": "node server",
+        "dev": "nodemon server"
     },
     "keywords": [
         "express",
@@ -14,17 +14,24 @@
     ],
     "license": "UNLICENSED",
     "dependencies": {
+        "bcrypt": "^5.1.1",
         "cookie-parser": "^1.4.4",
         "cors": "^2.8.5",
-        "helmet": "^3.21.2",
+        "dotenv": "^16.3.1",
+        "express": "^4.17.1",
         "express-custom-error": "^1.8.4",
-        "http-status": "^1.3.2",
         "has-keys": "^0.1.0",
-        "morgan": "^1.9.1",
-        "rotating-file-stream": "^1.4.6",
+        "helmet": "^3.21.2",
+        "http-status": "^1.3.2",
+        "jsonwebtoken": "^9.0.2",
         "mandatoryenv": "^1.1.1",
         "module-alias": "^2.2.2",
         "mongodb": "^3.3.3",
-        "express": "^4.17.1"
+        "morgan": "^1.9.1",
+        "rotating-file-stream": "^1.4.6",
+        "uuid": "^9.0.1"
+    },
+    "devDependencies": {
+        "nodemon": "^3.0.1"
     }
 }
