--- a/package.json
+++ b/package.json
@@ -17,18 +17,20 @@
         "bcrypt": "^5.1.1",
         "cookie-parser": "^1.4.4",
         "cors": "^2.8.5",
+        "date-fns": "^2.30.0",
         "dotenv": "^16.3.1",
         "express": "^4.17.1",
         "express-custom-error": "^1.8.4",
         "has-keys": "^0.1.0",
-        "helmet": "^3.21.2",
         "http-status": "^1.3.2",
         "jsonwebtoken": "^9.0.2",
         "mandatoryenv": "^1.1.1",
         "module-alias": "^2.2.2",
-        "mongodb": "^3.3.3",
+        "mongoose": "^7.5.4",
         "morgan": "^1.9.1",
+        "nanoid": "^5.0.1",
         "rotating-file-stream": "^1.4.6",
+        "uninstall": "^0.0.0",
         "uuid": "^9.0.1"
     },
     "devDependencies": {
