--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
         "dotenv": "^16.3.1",
         "express": "^4.17.1",
         "express-custom-error": "^1.8.4",
+        "express-rate-limit": "^7.1.1",
         "has-keys": "^0.1.0",
+        "http-proxy-middleware": "^2.0.6",
         "http-status": "^1.3.2",
         "jsonwebtoken": "^9.0.2",
         "mandatoryenv": "^1.1.1",
